Fix the home page glitch on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,8 +287,6 @@ body {
   #hero .hero-img {
     width: 100%;
     height: 100%;
-    margin: -20px auto;
-    padding: 20px;
     overflow: hidden;
   }
 
@@ -1033,6 +1031,7 @@ body {
 
 .cart-products-container img {
   width: 100%;
+  height: 100%;
   vertical-align: bottom;
 }
 
